[project]
name = "holjjagml"
version = "0.1.0"
description = "I want to learn. If you let me know, I will learn and sort it out."
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GNU"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
